# RAGster

legalMind-rag/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
legalMind-rag/config/: prompts.yaml  settings.yaml
legalMind-rag/data/raw/: sample_contract.txt
legalMind-rag/data/vectorstore/: chroma.sqlite3
legalMind-rag/scripts/: evaluate_rag.py  ingest_documents.py
legalMind-rag/src/: __init__.py
legalMind-rag/src/api/: __init__.py  main.py  middleware.py  routes.py  schemas.py
legalMind-rag/src/generation/: __init__.py  citation.py  llm_client.py  prompt_builder.py
legalMind-rag/src/ingestion/: __init__.py  chunker.py  cleaner.py  loader.py
legalMind-rag/src/retrieval/: __init__.py  reranker.py  retriever.py  vector_store.py
legalMind-rag/src/utils/: __init__.py  cache.py  config.py  logging.py  metrics.py
legalMind-rag/tests/: test_api.py  test_generation.py  test_ingestion.py  test_retrieval.py
legalMind-rag/web/: index.html
supportMind-rag/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
supportMind-rag/data/raw/sample_kb/: account-billing.md  api-quickstart.md  charging-troubleshooting.md  firmware-update.md  returns-and-warranty.md  wifi-setup.md
supportMind-rag/src/: __init__.py
supportMind-rag/src/api/: main.py  routes.py  schemas.py
supportMind-rag/src/generation/: generator.py  llm_client.py  prompts.py
supportMind-rag/src/ingestion/: chunker.py  cleaner.py  loaders.py  pipeline.py
supportMind-rag/src/retrieval/: bm25_index.py  embeddings.py  hybrid_retriever.py  query_rewriter.py  reranker.py  types.py  vector_store.py
supportMind-rag/src/utils/: config.py  logging.py  metrics.py
supportMind-rag/tests/: test_bm25.py  test_chunker.py  test_hybrid_retriever.py  test_query_rewriter.py
supportMind-rag/web/: index.html
