[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supportmind-rag"
version = "1.0.0"
description = "Advanced RAG service for customer-support Q&A — query rewriting, hybrid search (BM25 + vector), cross-encoder reranking, and semantic chunking."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "RAGster" }]
keywords = ["rag", "advanced-rag", "hybrid-search", "bm25", "rerank", "fastapi", "gemini"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.54.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "python-multipart>=0.0.12",
    "loguru>=0.7.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdown-it-py>=3.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
